tests/models/struct/unnamed/i8/pass/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    i8
);
fn main() {}
